fix: vertical center align btwn images and text

--- a/css/main.scss
+++ b/css/main.scss
@@ -38,8 +38,8 @@ figcaption {
 }
 
 .card-text {
-  margin-top: 2px;
-  margin-bottom: 2px;
+  margin-top: 3px;
+  margin-bottom: 3px;
 }
 
 .container-fluid {
